--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -35,14 +35,14 @@
             <Button x:Name="LoginButton" Style="{DynamicResource RoundedButtonStyle}" Click="LoginButton_Click"
                     Content="Login" FontSize="20" Padding="4" Margin="80 10 80 0"
                     Cursor="Hand"
-                    Foreground="#404040"/>
+                    Foreground="#e6e6e6"/>
 
             <!-- Create account button -->
             <Button x:Name="CreateAccountButton" Style="{DynamicResource RoundedButtonStyle}" Click="CreateAccountButton_Click"
                     Content="Create Account" Padding="4" Margin="60 20 60 0"
                     FontSize="20" 
                     Cursor="Hand"
-                    Foreground="#404040"/>
+                    Foreground="#e6e6e6"/>
 
         </StackPanel>
     </Border>
